--- a/SpringMVC/pom.xml
+++ b/SpringMVC/pom.xml
@@ -5,8 +5,9 @@
   <artifactId>SpringMVC</artifactId>
   <packaging>pom</packaging>
     <modules>
-        <module>SringMVC-Ajax</module>
         <module>SpringMVC-Rest</module>
+        <module>SpringMVC-Ajax</module>
+        <module>SpringMVC-fileUpload-DownLoad</module>
     </modules>
     <version>1.0-SNAPSHOT</version>
   <name>SpringMVC Maven Webapp</name>
@@ -52,19 +53,19 @@
           <artifactId>thymeleaf-spring5</artifactId>
           <version>3.0.9.RELEASE</version>
       </dependency>
+      <!-- 数据封装-->
+      <dependency>
+          <groupId>com.fasterxml.jackson.core</groupId>
+          <artifactId>jackson-databind</artifactId>
+          <version>2.12.1</version>
+      </dependency>
+      <!-- 文件上传-->
+      <dependency>
+          <groupId>commons-fileupload</groupId>
+          <artifactId>commons-fileupload</artifactId>
+          <version>1.3.3</version>
+      </dependency>
+
 
   </dependencies>
-  <build>
-    <finalName>SpringMVC</finalName>
-      <plugins>
-          <plugin>
-              <groupId>org.apache.maven.plugins</groupId>
-              <artifactId>maven-compiler-plugin</artifactId>
-              <configuration>
-                  <source>8</source>
-                  <target>8</target>
-              </configuration>
-          </plugin>
-      </plugins>
-  </build>
 </project>
